--- a/ui/src/components/ImageCard/ImageCard.module.scss
+++ b/ui/src/components/ImageCard/ImageCard.module.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Open+Sans&display=swap');
 
 .imageCard {
-	border: 1px solid rgba(255, 255, 255, 0.629);
-  border-radius: 5px;
+  @extend .card;
+	// border: 1px solid rgba(255, 255, 255, 0.629);
+  // border-radius: 5px;
   height: max-content;
 	margin: 10px;
 	padding: 10px;
@@ -11,7 +12,7 @@
 	justify-content: space-between;
   align-items: flex-start;
   width: 45%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  // font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ImageName {
