--- a/ui/src/components/ImagesSummary/ImagesSummary.module.scss
+++ b/ui/src/components/ImagesSummary/ImagesSummary.module.scss
@@ -2,7 +2,7 @@
   border: 1px solid rgba(0, 0, 0, 0.301);
   border-radius: 20px;
   height: 55px;
-  margin-top: 10px;
+  // margin-top: 10px;
   // padding: 10px;
   display: flex;
   align-content: space-evenly;
