--- a/ui/src/components/Metrics/Metrics.module.scss
+++ b/ui/src/components/Metrics/Metrics.module.scss
@@ -1,17 +1,31 @@
 .wrapper {
   margin: $default-page-margin;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 
-  h2 {
-    margin-bottom: 8px;
+  metricsTitle {
+    text-align: left;
   }
   .iframeHeader {
     display: flex;
-    align-items: end;
-    margin-bottom: 1rem;
+    margin-top: 30px;
   }
-}
 
+.iframeDiv {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.buttonDiv {
+  display: flex;
+  justify-content: center;
+  margin-left: 10px;
+}
 .button {
   background-color: #212121;
   border: none;
@@ -36,7 +50,7 @@
 }
 
 .metrics {
-  width: 500px;
+  width: 100vw;
   height: calc(100vh - (60px + 6rem));
   min-height: 20rem;
   border: 0px;
@@ -69,7 +83,7 @@
   content: '';
   position: absolute;
   top: 5px;
-  left: 5px;
+  // left: 5px;
   width: 30px;
   height: 30px;
   background: #fff;
