--- a/ui/src/components/Snapshots/Snapshots.module.scss
+++ b/ui/src/components/Snapshots/Snapshots.module.scss
@@ -30,12 +30,13 @@
   display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-bottom: 15px;
   // flex-direction: column;
   // height: 20px;
 }
 
-.date {
-  display:flex;
-	justify-content: space-evenly;
+.dateInput {
+	margin-left: 10px;
+	width: 120px;
 }
